Fix admin login border clipping

--- a/css/admin.css
+++ b/css/admin.css
@@ -47,7 +47,7 @@ body {
     background-image: linear-gradient(white, white),
         linear-gradient(to right, var(--primary-blue), var(--primary-red));
     background-origin: border-box;
-    background-clip: content-box, border-box;
+    background-clip: padding-box, border-box;
 }
 
 .auth-logo {
